--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
             formData.append('zipcode', zipcode);
 
             const xhr = new XMLHttpRequest();
-            const url = "YOUR_WEB_APP_URL";  //  <===== PASTE YOUR WEB APP URL HERE
+            const url = "https://script.google.com/macros/s/AKfycbzntTDHMM_kJJg4O1MCSv08D5f376seRvXJiNu4fZATbps5CcvoXzSB_EddBt_Lhnbd5w/exec";  //  <===== PASTE YOUR WEB APP URL HERE
             xhr.open('POST', url);
             xhr.onload = function() {
                 if (xhr.status === 200) {
